testing tcn model

--- a/notebooks/coinbase_api.ipynb
+++ b/notebooks/coinbase_api.ipynb
@@ -294,6 +294,35 @@
    "source": [
     "pd.to_datetime(1630800000, unit='s')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "ad05e26e-0a74-445b-8882-3f15465b6637",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2021-09-04 00:00:00')"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.to_datetime(1630713600, unit='s')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e37ba58-3505-48df-9ef3-8a12c0fc8641",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
