working on pulling coinbase data with golang

--- a/notebooks/coinbase_api.ipynb
+++ b/notebooks/coinbase_api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "e3f580df-54e9-4561-903c-4f9196a4c318",
    "metadata": {},
    "outputs": [],
@@ -34,19 +34,7 @@
    "execution_count": 3,
    "id": "34d11aa4-9f83-4e23-b7b5-8db53166664d",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'api_key'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/0r/jkhwtgvx0wb9vrk6xn4bmz2m0000gn/T/ipykernel_74511/65713341.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mclient\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mClient\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mapi_key\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcoinbase_tokens\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'api_key'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mapi_secret\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcoinbase_tokens\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'api_secret'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m: 'api_key'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "client = Client(api_key=coinbase_tokens['passphrase'], api_secret=coinbase_tokens['api_secret'])"
    ]
@@ -61,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "fbb93660-6c2d-448b-9f2b-7a2a5ec31d4a",
    "metadata": {},
    "outputs": [],
@@ -184,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "id": "6fc855ce-19eb-4ed9-ad63-c3f92dd252de",
    "metadata": {},
    "outputs": [],
@@ -196,26 +184,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "id": "bf76020f-16b5-49ba-a657-8aef91aa1641",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[1630972800, 42830.77, 52944.96, 52698.8, 46950.87, 28706.34074323],\n",
-       " [1630886400, 51020.08, 52802.03, 51789.17, 52698.81, 9571.75471136],\n",
-       " [1630800000, 49500, 51907.08, 49944.89, 51789.17, 7743.93472308],\n",
-       " [1630713600, 49400, 50558.75, 50025, 49942.98, 7595.48816499],\n",
-       " [1630627200, 48349.66, 51064.44, 49279.38, 50025, 14577.22621879],\n",
-       " [1630540800, 48620.73, 50392.19, 48834.27, 49279.37, 14120.3826407],\n",
-       " [1630454400, 46537.62, 49125, 47110.33, 48839.86, 13010.83839478],\n",
-       " [1630368000, 46708.93, 48259.68, 46996.8, 47112.5, 12919.43970212],\n",
-       " [1630281600, 46866, 48906.51, 48802.58, 46993.71, 12249.23741495],\n",
-       " [1630195200, 47801, 49667.1, 48942.89, 48802.58, 6935.09511006]]"
+       "[[1631750400, 47361.01, 48217.33, 48144.03, 47486.65, 1837.63049455],\n",
+       " [1631664000, 46705, 48475, 47127.81, 48148.12, 12139.84206628],\n",
+       " [1631577600, 44679.92, 47274.92, 44953.23, 47127.22, 12644.16435358],\n",
+       " [1631491200, 43465, 46900, 46027.8, 44947.72, 15015.30289712],\n",
+       " [1631404800, 44754.31, 46462.98, 45173.66, 46024.23, 6499.85821749],\n",
+       " [1631318400, 44730.29, 45989.94, 44850.37, 45171.83, 6207.38337004],\n",
+       " [1631232000, 44140.48, 47040.76, 46396.26, 44851.45, 14905.54795341],\n",
+       " [1631145600, 45511.82, 47400, 46059.94, 46400, 13594.64633403],\n",
+       " [1631059200, 44423.49, 47381.47, 46894.49, 46060.36, 19624.55093117],\n",
+       " [1630972800, 42830.77, 52944.96, 52698.8, 46894.5, 29022.815351]]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,23 +222,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "id": "275f0acb-a1a6-4838-8c7c-167d7942cf4a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Timestamp('2021-09-07 00:00:00')"
+       "Timestamp('2021-09-16 00:00:00')"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.to_datetime(1630972800, unit='s')"
+    "pd.to_datetime(historic_rates[0][0], unit='s')"
    ]
   },
   {
