update csv writer working

--- a/notebooks/bollinger_bands_and_coinbase_data.ipynb
+++ b/notebooks/bollinger_bands_and_coinbase_data.ipynb
@@ -1558,7 +1558,368 @@
       "2019-06-25 00:00:00 current date\n",
       "9614.993571428571 mean\n",
       "7707.77 self.buy_entry_price\n",
-      "11790.92 current close\n"
+      "11790.92 current close\n",
+      " Lookback = 31_TCN Prediction = 13625.680042446964\n",
+      " Lookback = 31_NBEATS Prediction = 7778.851147640915\n",
+      "10702.26559504394 ml_pred\n",
+      "Updating stop loss to 11714.607\n",
+      "13016.23 row close\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-06-26 00:00:00 current date\n",
+      "9962.877142857144 mean\n",
+      "7707.77 self.buy_entry_price\n",
+      "13016.23 current close\n",
+      " Lookback = 31_TCN Prediction = 14183.750048477264\n",
+      " Lookback = 31_NBEATS Prediction = 8073.346163800818\n",
+      "11128.548106139042 ml_pred\n",
+      "----\n",
+      "stop loss activated for getting out of our buy\n",
+      "2019-06-27 00:00:00 current date\n",
+      "11182.81 row close\n",
+      "11714.607 self.stop_loss_price\n",
+      "7707.77 self.buy_entry_price\n",
+      "Won 3475.039999999999 on this trade\n",
+      "23 days in trade\n",
+      "Average days in trades = 16.5\n",
+      "Bat rate buy so far = 1.0\n",
+      "Bat rate short so far = 0.5\n",
+      "Win rate buy so far = 1.0\n",
+      "Win rate short so far = 0.04363145416227604\n",
+      "WIn / lost dict {'n_short_lost': 1, 'n_buy_lost': 0, 'n_short_won': 1, 'n_buy_won': 2, '$_short_lost': 290.4300000000003, '$_buy_lost': 0, '$_short_won': 13.25, '$_buy_won': 4686.5}\n",
+      "Total days in trades = 66\n",
+      "----------\n",
+      "short\n",
+      "2019-06-28 00:00:00 current date\n",
+      "12407.33 close\n",
+      " Lookback = 31_TCN Prediction = 13875.124871553442\n",
+      " Lookback = 31_NBEATS Prediction = 8453.31409393419\n",
+      "11164.219482743816 ml pred day\n",
+      "10438.976428571428 mean\n",
+      "Eval short took 0.5839574654897054 minutes\n",
+      "----------\n",
+      "short\n",
+      "2019-07-09 00:00:00 current date\n",
+      "12573.81 close\n",
+      " Lookback = 31_TCN Prediction = 15245.506933958675\n",
+      " Lookback = 31_NBEATS Prediction = 12645.226818754232\n",
+      "13945.366876356453 ml pred day\n",
+      "11603.003571428573 mean\n",
+      "Eval short took 0.6404610474904379 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2019-07-14 00:00:00 current date\n",
+      "10256.06 close\n",
+      " Lookback = 31_TCN Prediction = 14178.190898964502\n",
+      " Lookback = 31_NBEATS Prediction = 4348.801735115273\n",
+      "9263.496317039888 ml prediction day\n",
+      "11431.339285714284 mean\n",
+      "Eval buy took 0.6339364210764568 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2019-07-16 00:00:00 current date\n",
+      "9477.64 close\n",
+      " Lookback = 31_TCN Prediction = 13933.37836680013\n",
+      " Lookback = 31_NBEATS Prediction = 3376.969268262984\n",
+      "8655.173817531557 ml prediction day\n",
+      "11359.047857142856 mean\n",
+      "Eval buy took 0.6853624979654948 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2019-07-27 00:00:00 current date\n",
+      "9477.68 close\n",
+      " Lookback = 31_TCN Prediction = 13425.044241422956\n",
+      " Lookback = 31_NBEATS Prediction = 4536.680337204412\n",
+      "8980.862289313685 ml prediction day\n",
+      "10157.26285714286 mean\n",
+      "Eval buy took 0.6803868174552917 minutes\n",
+      "----------\n",
+      "short\n",
+      "2019-08-03 00:00:00 current date\n",
+      "10821.73 close\n",
+      " Lookback = 31_TCN Prediction = 12840.026400914187\n",
+      " Lookback = 31_NBEATS Prediction = 3968.6304917893276\n",
+      "8404.328446351758 ml pred day\n",
+      "10029.955 mean\n",
+      "pred 7 day lower than mean taking position\n",
+      "Eval short took 0.6689639687538147 minutes\n",
+      "---------\n",
+      "checking if we should get out of our short position\n",
+      "2019-08-04 00:00:00 current date\n",
+      "10056.460000000001 mean\n",
+      "10821.73 self.short_entry_price\n",
+      "10970.18 current close\n",
+      " Lookback = 31_TCN Prediction = 13143.572942239009\n",
+      " Lookback = 31_NBEATS Prediction = 3363.420465795973\n",
+      "8253.49670401749 ml_pred\n",
+      "---------\n",
+      "checking if we should get out of our short position\n",
+      "2019-08-05 00:00:00 current date\n",
+      "10160.927142857143 mean\n",
+      "10821.73 self.short_entry_price\n",
+      "11805.65 current close\n",
+      " Lookback = 31_TCN Prediction = 13480.32546698826\n",
+      " Lookback = 31_NBEATS Prediction = 3081.2894954050576\n",
+      "8280.80748119666 ml_pred\n",
+      "---------\n",
+      "checking if we should get out of our short position\n",
+      "2019-08-06 00:00:00 current date\n",
+      "10273.598571428569 mean\n",
+      "10821.73 self.short_entry_price\n",
+      "11478.17 current close\n",
+      " Lookback = 31_TCN Prediction = 13032.077048673531\n",
+      " Lookback = 31_NBEATS Prediction = 3224.089151177521\n",
+      "8128.083099925526 ml_pred\n",
+      "----\n",
+      "stop loss activated for getting out of our short\n",
+      "2019-08-07 00:00:00 current date\n",
+      "11941.97 row close\n",
+      "11903.903 self.stop_loss_price\n",
+      "10821.73 self.short_entry_price\n",
+      "Lost 1120.2399999999998 on this trade\n",
+      "4 days in trade\n",
+      "Average days in trades = 14.0\n",
+      "Bat rate buy so far = 1.0\n",
+      "Bat rate short so far = 0.3333333333333333\n",
+      "Win rate buy so far = 1.0\n",
+      "Win rate short so far = 0.009305298050452273\n",
+      "WIn / lost dict {'n_short_lost': 2, 'n_buy_lost': 0, 'n_short_won': 1, 'n_buy_won': 2, '$_short_lost': 1410.67, '$_buy_lost': 0, '$_short_won': 13.25, '$_buy_won': 4686.5}\n",
+      "Total days in trades = 70\n",
+      "----------\n",
+      "buy\n",
+      "2019-08-14 00:00:00 current date\n",
+      "10051.7 close\n",
+      " Lookback = 31_TCN Prediction = 12073.67778187784\n",
+      " Lookback = 31_NBEATS Prediction = 3419.838278827239\n",
+      "7746.758030352539 ml prediction day\n",
+      "11212.331428571428 mean\n",
+      "Eval buy took 0.7343165119489033 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2019-08-28 00:00:00 current date\n",
+      "9754.42 close\n",
+      " Lookback = 31_TCN Prediction = 11303.349328890945\n",
+      " Lookback = 31_NBEATS Prediction = 3681.3729822793152\n",
+      "7492.36115558513 ml prediction day\n",
+      "10302.072857142857 mean\n",
+      "Eval buy took 0.7857690135637919 minutes\n",
+      "----------\n",
+      "short\n",
+      "2019-09-03 00:00:00 current date\n",
+      "10623.54 close\n",
+      " Lookback = 31_TCN Prediction = 11451.45372350109\n",
+      " Lookback = 31_NBEATS Prediction = 2864.32782982039\n",
+      "7157.89077666074 ml pred day\n",
+      "10053.828571428572 mean\n",
+      "pred 7 day lower than mean taking position\n",
+      "Eval short took 0.8369556983311971 minutes\n",
+      "Updating stop loss to 11653.939\n",
+      "10594.49 row close\n",
+      "---------\n",
+      "checking if we should get out of our short position\n",
+      "2019-09-04 00:00:00 current date\n",
+      "10086.43142857143 mean\n",
+      "10623.54 self.short_entry_price\n",
+      "10594.49 current close\n",
+      " Lookback = 31_TCN Prediction = 11246.977751981722\n",
+      " Lookback = 31_NBEATS Prediction = 11976.923317419969\n",
+      "11611.950534700845 ml_pred\n",
+      "short_to_no_position\n",
+      "Won 29.05000000000109 on this trade\n",
+      "1 days in trade\n",
+      "Average days in trades = 11.833333333333334\n",
+      "Bat rate buy so far = 1.0\n",
+      "Bat rate short so far = 0.5\n",
+      "Win rate buy so far = 1.0\n",
+      "Win rate short so far = 0.029112782782852405\n",
+      "WIn / lost dict {'n_short_lost': 2, 'n_buy_lost': 0, 'n_short_won': 2, 'n_buy_won': 2, '$_short_lost': 1410.67, '$_buy_lost': 0, '$_short_won': 42.30000000000109, '$_buy_won': 4686.5}\n",
+      "Total days in trades = 71\n",
+      "----------\n",
+      "buy\n",
+      "2019-09-21 00:00:00 current date\n",
+      "10019.72 close\n",
+      " Lookback = 31_TCN Prediction = 10872.63663354015\n",
+      " Lookback = 31_NBEATS Prediction = 4927.75239628999\n",
+      "7900.194514915071 ml prediction day\n",
+      "10266.50857142857 mean\n",
+      "Eval buy took 0.8629759828249614 minutes\n",
+      "----------\n",
+      "short\n",
+      "2019-10-09 00:00:00 current date\n",
+      "8595.74 close\n",
+      " Lookback = 31_TCN Prediction = 8590.594501365356\n",
+      " Lookback = 31_NBEATS Prediction = 3269.1720125753804\n",
+      "5929.883256970368 ml pred day\n",
+      "8244.775 mean\n",
+      "pred 7 day lower than mean taking position\n",
+      "Eval short took 0.9000319480895996 minutes\n",
+      "Updating stop loss to 9445.117\n",
+      "8586.47 row close\n",
+      "---------\n",
+      "checking if we should get out of our short position\n",
+      "2019-10-10 00:00:00 current date\n",
+      "8278.167857142858 mean\n",
+      "8595.74 self.short_entry_price\n",
+      "8586.47 current close\n",
+      " Lookback = 31_TCN Prediction = 8823.815229497452\n",
+      " Lookback = 31_NBEATS Prediction = 4984.263456174568\n",
+      "6904.039342836009 ml_pred\n",
+      "Updating stop loss to 9153.936000000002\n",
+      "8321.76 row close\n",
+      "---------\n",
+      "checking if we should get out of our short position\n",
+      "2019-10-11 00:00:00 current date\n",
+      "8283.161428571428 mean\n",
+      "8595.74 self.short_entry_price\n",
+      "8321.76 current close\n",
+      " Lookback = 31_TCN Prediction = 8372.617715283084\n",
+      " Lookback = 31_NBEATS Prediction = 4152.645687349688\n",
+      "6262.631701316386 ml_pred\n",
+      "---------\n",
+      "checking if we should get out of our short position\n",
+      "2019-10-12 00:00:00 current date\n",
+      "8289.635714285714 mean\n",
+      "8595.74 self.short_entry_price\n",
+      "8336.56 current close\n",
+      " Lookback = 31_TCN Prediction = 8222.607115625295\n",
+      " Lookback = 31_NBEATS Prediction = 14626.704557054562\n",
+      "11424.655836339927 ml_pred\n",
+      "short_to_no_position\n",
+      "Won 259.1800000000003 on this trade\n",
+      "3 days in trade\n",
+      "Average days in trades = 10.571428571428571\n",
+      "Bat rate buy so far = 1.0\n",
+      "Bat rate short so far = 0.6\n",
+      "Win rate buy so far = 1.0\n",
+      "Win rate short so far = 0.17608270303419743\n",
+      "WIn / lost dict {'n_short_lost': 2, 'n_buy_lost': 0, 'n_short_won': 3, 'n_buy_won': 2, '$_short_lost': 1410.67, '$_buy_lost': 0, '$_short_won': 301.4800000000014, '$_buy_won': 4686.5}\n",
+      "Total days in trades = 74\n",
+      "----------\n",
+      "buy\n",
+      "2019-10-16 00:00:00 current date\n",
+      "8047.53 close\n",
+      " Lookback = 31_TCN Prediction = 8360.024579180197\n",
+      " Lookback = 31_NBEATS Prediction = 10415.02623510284\n",
+      "9387.525407141518 ml prediction day\n",
+      "8276.365714285716 mean\n",
+      "ml pred higher than mean taking position\n",
+      "Eval buy took 0.9311843951543172 minutes\n",
+      "Updating stop loss to 7293.519\n",
+      "8103.91 row close\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-10-17 00:00:00 current date\n",
+      "8265.217142857144 mean\n",
+      "8047.53 self.buy_entry_price\n",
+      "8103.91 current close\n",
+      " Lookback = 31_TCN Prediction = 8363.991562698042\n",
+      " Lookback = 31_NBEATS Prediction = 12841.373866343129\n",
+      "10602.682714520586 ml_pred\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-10-18 00:00:00 current date\n",
+      "8248.593571428572 mean\n",
+      "8047.53 self.buy_entry_price\n",
+      "7973.21 current close\n",
+      " Lookback = 31_TCN Prediction = 8543.029574287782\n",
+      " Lookback = 31_NBEATS Prediction = 6623.6443450446695\n",
+      "7583.336959666226 ml_pred\n",
+      "buy_to_no_position\n",
+      "Lost 74.31999999999971 on this trade\n",
+      "2 days in trade\n",
+      "Average days in trades = 9.5\n",
+      "Bat rate buy so far = 0.6666666666666666\n",
+      "Bat rate short so far = 0.6\n",
+      "Win rate buy so far = 0.9843892438697536\n",
+      "Win rate short so far = 0.17608270303419743\n",
+      "WIn / lost dict {'n_short_lost': 2, 'n_buy_lost': 1, 'n_short_won': 3, 'n_buy_won': 2, '$_short_lost': 1410.67, '$_buy_lost': 74.31999999999971, '$_short_won': 301.4800000000014, '$_buy_won': 4686.5}\n",
+      "Total days in trades = 76\n",
+      "----------\n",
+      "buy\n",
+      "2019-10-23 00:00:00 current date\n",
+      "7514.67 close\n",
+      " Lookback = 31_TCN Prediction = 7392.794322958467\n",
+      " Lookback = 31_NBEATS Prediction = 7300.934000681455\n",
+      "7346.864161819961 ml prediction day\n",
+      "8165.552857142857 mean\n",
+      "Eval buy took 1.0088237007459004 minutes\n",
+      "----------\n",
+      "short\n",
+      "2019-10-25 00:00:00 current date\n",
+      "8660.7 close\n",
+      " Lookback = 31_TCN Prediction = 8688.337489088162\n",
+      " Lookback = 31_NBEATS Prediction = 14022.17209093694\n",
+      "11355.25479001255 ml pred day\n",
+      "8111.692857142857 mean\n",
+      "Eval short took 0.9983327150344848 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2019-11-08 00:00:00 current date\n",
+      "8804.88 close\n",
+      " Lookback = 31_TCN Prediction = 9144.113727114609\n",
+      " Lookback = 31_NBEATS Prediction = 9049.565765285823\n",
+      "9096.839746200216 ml prediction day\n",
+      "9278.247142857143 mean\n",
+      "Eval buy took 0.9658037662506104 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2019-11-11 00:00:00 current date\n",
+      "8757.79 close\n",
+      " Lookback = 31_TCN Prediction = 8954.246361883228\n",
+      " Lookback = 31_NBEATS Prediction = 7816.781862660118\n",
+      "8385.514112271674 ml prediction day\n",
+      "9176.395 mean\n",
+      "Eval buy took 1.0180943330128989 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2019-11-14 00:00:00 current date\n",
+      "8708.1 close\n",
+      " Lookback = 31_TCN Prediction = 8785.422503951331\n",
+      " Lookback = 31_NBEATS Prediction = 7413.345459586366\n",
+      "8099.383981768849 ml prediction day\n",
+      "9069.182142857144 mean\n",
+      "Eval buy took 1.0519447684288026 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2019-11-18 00:00:00 current date\n",
+      "8309.29 close\n",
+      " Lookback = 31_TCN Prediction = 8450.565135098006\n",
+      " Lookback = 31_NBEATS Prediction = 6802.366416533783\n",
+      "7626.465775815895 ml prediction day\n",
+      "8833.199285714287 mean\n",
+      "Eval buy took 1.0838811159133912 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2019-12-10 00:00:00 current date\n",
+      "7278.12 close\n",
+      " Lookback = 31_TCN Prediction = 6842.779603728627\n",
+      " Lookback = 31_NBEATS Prediction = 7635.874801326376\n",
+      "7239.327202527502 ml prediction day\n",
+      "7459.929999999999 mean\n",
+      "Eval buy took 1.0862760464350383 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2019-12-14 00:00:00 current date\n",
+      "7124.67 close\n",
+      " Lookback = 31_TCN Prediction = 7009.264184942159\n",
+      " Lookback = 31_NBEATS Prediction = 7613.059099677175\n",
+      "7311.1616423096675 ml prediction day\n",
+      "7354.877857142857 mean\n",
+      "Eval buy took 1.1833820025126138 minutes\n",
+      "----------\n",
+      "short\n",
+      "2019-12-22 00:00:00 current date\n",
+      "7511.59 close\n",
+      " Lookback = 31_TCN Prediction = 7064.2780839777415\n",
+      " Lookback = 31_NBEATS Prediction = 7353.23117591274\n",
+      "7208.754629945241 ml pred day\n",
+      "7190.0314285714285 mean\n",
+      "Eval short took 1.173876933256785 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2020-01-02 00:00:00 current date\n",
+      "6985.47 close\n",
+      " Lookback = 31_TCN Prediction = 7378.90205416312\n"
      ]
     }
    ],
