designate lane lines for programs

--- a/notebooks/bollinger_bands_and_coinbase_data.ipynb
+++ b/notebooks/bollinger_bands_and_coinbase_data.ipynb
@@ -2459,7 +2459,42 @@
       "10759.527857142859 mean\n",
       "10246.19 self.buy_entry_price\n",
       "10709.65 current close\n",
-      " Lookback = 31_TCN Prediction = 10942.430969642153\n"
+      " Lookback = 31_TCN Prediction = 10942.430969642153\n",
+      " Lookback = 31_NBEATS Prediction = 10435.040512867583\n",
+      "10688.735741254868 ml_pred\n",
+      "buy_to_no_position\n",
+      "Won 463.4599999999991 on this trade\n",
+      "5 days in trade\n",
+      "Average days in trades = 7.6\n",
+      "Bat rate buy so far = 0.5555555555555556\n",
+      "Bat rate short so far = 0.6666666666666666\n",
+      "Win rate buy so far = 0.852274386682243\n",
+      "Win rate short so far = 0.3338574943215893\n",
+      "WIn / lost dict {'n_short_lost': 2, 'n_buy_lost': 4, 'n_short_won': 4, 'n_buy_won': 5, '$_short_lost': 1410.67, '$_buy_lost': 971.1599999999999, '$_short_won': 707.0, '$_buy_won': 5602.92}\n",
+      "Total days in trades = 114\n",
+      "----------\n",
+      "short\n",
+      "2020-10-08 00:00:00 current date\n",
+      "10915.69 close\n",
+      " Lookback = 31_TCN Prediction = 10867.002891910784\n",
+      " Lookback = 31_NBEATS Prediction = 10997.97725592938\n",
+      "10932.490073920082 ml pred day\n",
+      "10711.017142857145 mean\n",
+      "Eval short took 2.146761933962504 minutes\n",
+      "----------\n",
+      "short\n",
+      "2020-10-19 00:00:00 current date\n",
+      "11742.04 close\n",
+      " Lookback = 31_TCN Prediction = 11373.896861250045\n",
+      " Lookback = 31_NBEATS Prediction = 11670.083681312011\n",
+      "11521.990271281029 ml pred day\n",
+      "11267.557857142858 mean\n",
+      "Eval short took 2.0961253166198732 minutes\n",
+      "----------\n",
+      "short\n",
+      "2020-10-27 00:00:00 current date\n",
+      "13654.22 close\n",
+      " Lookback = 31_TCN Prediction = 14181.782529343207\n"
      ]
     }
    ],
