update csv name

--- a/notebooks/bollinger_bands_and_coinbase_data.ipynb
+++ b/notebooks/bollinger_bands_and_coinbase_data.ipynb
@@ -1721,7 +1721,19 @@
       "2019-06-19 00:00:00 current date\n",
       "8429.666428571429 mean\n",
       "7707.77 self.buy_entry_price\n",
-      "9273.52 current close\n"
+      "9273.52 current close\n",
+      " Lookback = 31_TCN Prediction = 11117.65621782832\n",
+      " Lookback = 31_NBEATS Prediction = 11916.921591533235\n",
+      "11517.288904680778 ml_pred\n",
+      "Updating stop loss to 8574.444\n",
+      "9527.16 row close\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-06-20 00:00:00 current date\n",
+      "8551.462142857143 mean\n",
+      "7707.77 self.buy_entry_price\n",
+      "9527.16 current close\n",
+      " Lookback = 31_TCN Prediction = 11334.525749578152\n"
      ]
     }
    ],
