start working on python program

--- a/notebooks/bollinger_bands_and_coinbase_data.ipynb
+++ b/notebooks/bollinger_bands_and_coinbase_data.ipynb
@@ -1392,7 +1392,201 @@
       "162.3007142857143 mean\n",
       "154.46 self.buy_entry_price\n",
       "172.65 current close\n",
-      " Lookback = 31_TCN Prediction = 189.5783397214456\n"
+      " Lookback = 31_TCN Prediction = 189.5783397214456\n",
+      " Lookback = 31_NBEATS Prediction = 175.99474730395806\n",
+      "182.78654351270183 ml_pred\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-05-07 00:00:00 current date\n",
+      "162.18285714285713 mean\n",
+      "154.46 self.buy_entry_price\n",
+      "169.8 current close\n",
+      " Lookback = 31_TCN Prediction = 183.8876924096819\n",
+      " Lookback = 31_NBEATS Prediction = 201.531768569962\n",
+      "192.70973048982194 ml_pred\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-05-08 00:00:00 current date\n",
+      "162.54857142857142 mean\n",
+      "154.46 self.buy_entry_price\n",
+      "170.95 current close\n",
+      " Lookback = 31_TCN Prediction = 183.23338612732064\n",
+      " Lookback = 31_NBEATS Prediction = 193.71946958846448\n",
+      "188.47642785789256 ml_pred\n",
+      "Updating stop loss to 155.826\n",
+      "173.14 row close\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-05-10 00:00:00 current date\n",
+      "164.87857142857143 mean\n",
+      "154.46 self.buy_entry_price\n",
+      "173.14 current close\n",
+      " Lookback = 31_TCN Prediction = 181.77446037185518\n",
+      " Lookback = 31_NBEATS Prediction = 180.22579074063754\n",
+      "181.00012555624636 ml_pred\n",
+      "Updating stop loss to 174.87\n",
+      "194.3 row close\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-05-11 00:00:00 current date\n",
+      "167.44071428571428 mean\n",
+      "154.46 self.buy_entry_price\n",
+      "194.3 current close\n",
+      " Lookback = 31_TCN Prediction = 196.08607653131466\n",
+      " Lookback = 31_NBEATS Prediction = 195.57717969215128\n",
+      "195.83162811173298 ml_pred\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-05-12 00:00:00 current date\n",
+      "169.58571428571426 mean\n",
+      "154.46 self.buy_entry_price\n",
+      "187.33 current close\n",
+      " Lookback = 31_TCN Prediction = 199.76276523429345\n",
+      " Lookback = 31_NBEATS Prediction = 193.67362452262597\n",
+      "196.7181948784597 ml_pred\n",
+      "Updating stop loss to 177.165\n",
+      "196.85 row close\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-05-13 00:00:00 current date\n",
+      "172.5607142857143 mean\n",
+      "154.46 self.buy_entry_price\n",
+      "196.85 current close\n",
+      " Lookback = 31_TCN Prediction = 199.81228498103275\n",
+      " Lookback = 31_NBEATS Prediction = 205.7641694453973\n",
+      "202.788227213215 ml_pred\n",
+      "Updating stop loss to 195.435\n",
+      "217.15 row close\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-05-14 00:00:00 current date\n",
+      "176.48785714285714 mean\n",
+      "154.46 self.buy_entry_price\n",
+      "217.15 current close\n",
+      " Lookback = 31_TCN Prediction = 214.86789337965672\n",
+      " Lookback = 31_NBEATS Prediction = 196.22734050374015\n",
+      "205.54761694169844 ml_pred\n",
+      "Updating stop loss to 222.435\n",
+      "247.15 row close\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-05-15 00:00:00 current date\n",
+      "182.6542857142857 mean\n",
+      "154.46 self.buy_entry_price\n",
+      "247.15 current close\n",
+      " Lookback = 31_TCN Prediction = 227.49263288481222\n",
+      " Lookback = 31_NBEATS Prediction = 205.58038231642294\n",
+      "216.5365076006176 ml_pred\n",
+      "Updating stop loss to 237.609\n",
+      "264.01 row close\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-05-16 00:00:00 current date\n",
+      "189.93214285714288 mean\n",
+      "154.46 self.buy_entry_price\n",
+      "264.01 current close\n",
+      " Lookback = 31_TCN Prediction = 248.77751231899447\n",
+      " Lookback = 31_NBEATS Prediction = 205.93064455297306\n",
+      "227.35407843598375 ml_pred\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-05-17 00:00:00 current date\n",
+      "195.34714285714287 mean\n",
+      "154.46 self.buy_entry_price\n",
+      "243.76 current close\n",
+      " Lookback = 31_TCN Prediction = 240.89549392718178\n",
+      " Lookback = 31_NBEATS Prediction = 207.42457947094474\n",
+      "224.16003669906326 ml_pred\n",
+      "----\n",
+      "stop loss activated for getting out of our buy\n",
+      "2019-05-18 00:00:00 current date\n",
+      "234.6 row close\n",
+      "237.609 self.stop_loss_price\n",
+      "154.46 self.buy_entry_price\n",
+      "Won 80.13999999999999 on this trade\n",
+      "23 days in trade\n",
+      "Average days in trades = 33.0\n",
+      "Bat rate buy so far = 1.0\n",
+      "Win rate buy so far = 1.0\n",
+      "WIn / lost dict {'n_short_lost': 0, 'n_buy_lost': 0, 'n_short_won': 0, 'n_buy_won': 2, '$_short_lost': 0, '$_buy_lost': 0, '$_short_won': 0, '$_buy_won': 109.45999999999998}\n",
+      "Total days in trades = 66\n",
+      "----------\n",
+      "short\n",
+      "2019-05-19 00:00:00 current date\n",
+      "261.29 close\n",
+      " Lookback = 31_TCN Prediction = 254.6000204823554\n",
+      " Lookback = 31_NBEATS Prediction = 224.40903611528438\n",
+      "239.50452829881988 ml pred day\n",
+      "207.3764285714286 mean\n",
+      "Eval short took 2.487725532054901 minutes\n",
+      "----------\n",
+      "short\n",
+      "2019-05-27 00:00:00 current date\n",
+      "272.86 close\n",
+      " Lookback = 31_TCN Prediction = 287.57256693602744\n",
+      " Lookback = 31_NBEATS Prediction = 251.60742681653133\n",
+      "269.5899968762794 ml pred day\n",
+      "250.49142857142854 mean\n",
+      "Eval short took 2.57683713833491 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2019-06-04 00:00:00 current date\n",
+      "241.34 close\n",
+      " Lookback = 31_TCN Prediction = 306.8418106925655\n",
+      " Lookback = 31_NBEATS Prediction = 302.8494403845231\n",
+      "304.8456255385443 ml prediction day\n",
+      "259.0435714285714 mean\n",
+      "ml pred higher than mean taking position\n",
+      "Eval buy took 2.6069017171859743 minutes\n",
+      "Updating stop loss to 222.34500000000003\n",
+      "247.05 row close\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-06-05 00:00:00 current date\n",
+      "259.2114285714286 mean\n",
+      "241.34 self.buy_entry_price\n",
+      "247.05 current close\n",
+      " Lookback = 31_TCN Prediction = 304.2493047280355\n",
+      " Lookback = 31_NBEATS Prediction = 311.5977015011022\n",
+      "307.92350311456886 ml_pred\n",
+      "Updating stop loss to 224.523\n",
+      "249.47 row close\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-06-06 00:00:00 current date\n",
+      "259.46142857142854 mean\n",
+      "241.34 self.buy_entry_price\n",
+      "249.47 current close\n",
+      " Lookback = 31_TCN Prediction = 337.9600149042784\n",
+      " Lookback = 31_NBEATS Prediction = 344.19059492768514\n",
+      "341.07530491598175 ml_pred\n",
+      "Updating stop loss to 225.83700000000002\n",
+      "250.93 row close\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-06-07 00:00:00 current date\n",
+      "259.565 mean\n",
+      "241.34 self.buy_entry_price\n",
+      "250.93 current close\n",
+      " Lookback = 31_TCN Prediction = 307.74622195387633\n",
+      " Lookback = 31_NBEATS Prediction = 359.6256456433244\n",
+      "333.68593379860033 ml_pred\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-06-08 00:00:00 current date\n",
+      "259.135 mean\n",
+      "241.34 self.buy_entry_price\n",
+      "245.74 current close\n",
+      " Lookback = 31_TCN Prediction = 325.02330687179324\n",
+      " Lookback = 31_NBEATS Prediction = 323.77159865525414\n",
+      "324.3974527635237 ml_pred\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-06-09 00:00:00 current date\n",
+      "256.7078571428571 mean\n",
+      "241.34 self.buy_entry_price\n",
+      "233.09 current close\n",
+      " Lookback = 31_TCN Prediction = 311.6688871848014\n"
      ]
     }
    ],
