reading in models

--- a/notebooks/testing_bollinger_bands_and_ts_models.ipynb
+++ b/notebooks/testing_bollinger_bands_and_ts_models.ipynb
@@ -2201,7 +2201,8 @@
     "    n_epochs=10,\n",
     "    input_chunk_length=30,\n",
     "    output_chunk_length=14,\n",
-    "    likelihood=GaussianLikelihoodModel(), random_state=0, model_name=\"Test_TCN_reset\", force_reset=True,    log_tensorboard=True)\n",
+    "    likelihood=GaussianLikelihoodModel(), random_state=0, model_name=\"Test_TCN_reset\", force_reset=True,   \n",
+    "    log_tensorboard=True)\n",
     "\n",
     "deeptcn.fit(series = close_train, past_covariates = [all_covariates_transformed_train],  verbose=True)"
    ]
@@ -2244,40 +2245,6 @@
    "source": [
     "- Test loading a model from a checkpoint. It works!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading checkpoint_9.pth.tar\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<darts.models.tcn_model.TCNModel at 0x186e68550>"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "deeptcn.load_from_checkpoint(model_name=\"Test_TCN_reset\", best=False) #"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
