determining trading state

--- a/notebooks/saving_and_loading_darts_models.ipynb
+++ b/notebooks/saving_and_loading_darts_models.ipynb
@@ -120,11 +120,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "db1fc35f-0b1b-462e-a1f8-1f403b59bc8c",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'31_tcn'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "deeptcn.model_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d324f407-6e1f-4181-9c77-ea4c130ae3d7",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model_name"
+   ]
   }
  ],
  "metadata": {
