--- a/notebooks/bollinger_bands_and_coinbase_data.ipynb
+++ b/notebooks/bollinger_bands_and_coinbase_data.ipynb
@@ -2127,7 +2127,32 @@
       "2020-01-28 00:00:00 current date\n",
       "176.37 close\n",
       "Creating ML models\n",
-      " Lookback = 180_TCN Prediction = 178.33751883965786\n"
+      " Lookback = 180_TCN Prediction = 178.33751883965786\n",
+      " Lookback = 180_NBEATS Prediction = 149.26214545291757\n",
+      "163.7998321462877 ml pred day\n",
+      "167.96357142857144 mean\n",
+      "pred 7 day lower than mean taking position\n",
+      "Eval short took 3.93983819882075 minutes\n",
+      "Updating stop loss to 192.55500000000004\n",
+      "175.05 row close\n",
+      "---------\n",
+      "checking if we should get out of our short position\n",
+      "2020-01-29 00:00:00 current date\n",
+      "168.59357142857144 mean\n",
+      "176.37 self.short_entry_price\n",
+      "175.05 current close\n",
+      "Creating ML models\n",
+      " Lookback = 180_TCN Prediction = 168.57446768120136\n",
+      " Lookback = 180_NBEATS Prediction = 156.18329478392613\n",
+      "162.37888123256374 ml_pred\n",
+      "---------\n",
+      "checking if we should get out of our short position\n",
+      "2020-01-30 00:00:00 current date\n",
+      "170.04357142857143 mean\n",
+      "176.37 self.short_entry_price\n",
+      "184.69 current close\n",
+      "Creating ML models\n",
+      " Lookback = 180_TCN Prediction = 198.58425323342524\n"
      ]
     }
    ],
