--- a/notebooks/bollinger_bands_and_coinbase_data.ipynb
+++ b/notebooks/bollinger_bands_and_coinbase_data.ipynb
@@ -2317,7 +2317,16 @@
       "2020-07-21 00:00:00 current date\n",
       "245.02 close\n",
       "Creating ML models\n",
-      " Lookback = 30_TCN Prediction = 246.64686521339456\n"
+      " Lookback = 30_TCN Prediction = 246.64686521339456\n",
+      " Lookback = 30_NBEATS Prediction = 245.84933646097738\n",
+      "246.24810083718597 ml pred day\n",
+      "238.19099999999997 mean\n",
+      "Eval short took 2.812635564804077 minutes\n",
+      "----------\n",
+      "short\n",
+      "2020-08-01 00:00:00 current date\n",
+      "385.2 close\n",
+      "Creating ML models\n"
      ]
     }
    ],
