--- a/notebooks/bollinger_bands_and_coinbase_data.ipynb
+++ b/notebooks/bollinger_bands_and_coinbase_data.ipynb
@@ -2326,7 +2326,28 @@
       "short\n",
       "2020-08-01 00:00:00 current date\n",
       "385.2 close\n",
-      "Creating ML models\n"
+      "Creating ML models\n",
+      " Lookback = 30_TCN Prediction = 377.3090624210176\n",
+      " Lookback = 30_NBEATS Prediction = 296.8764095112038\n",
+      "337.0927359661107 ml pred day\n",
+      "318.931 mean\n",
+      "Eval short took 2.8311932484308877 minutes\n",
+      "----------\n",
+      "short\n",
+      "2020-08-03 00:00:00 current date\n",
+      "386.3 close\n",
+      "Creating ML models\n",
+      " Lookback = 30_TCN Prediction = 381.5803551014062\n",
+      " Lookback = 30_NBEATS Prediction = 334.0783962381673\n",
+      "357.8293756697867 ml pred day\n",
+      "339.23699999999997 mean\n",
+      "Eval short took 2.5010572830835978 minutes\n",
+      "----------\n",
+      "short\n",
+      "2020-08-13 00:00:00 current date\n",
+      "428.74 close\n",
+      "Creating ML models\n",
+      " Lookback = 30_TCN Prediction = 432.4595051235446\n"
      ]
     }
    ],
